Change format to button-based matches with added scoreboard functionality and styling.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="scoreboard">
+        <p class="player-scoreboard"></p>
+        <p class="computer-scoreboard"></p>
+    </div>
+    <div class="button-container">
+        <button class="selection" id="rock">ROCK</button>
+        <button class="selection" id="paper">PAPER</button>
+        <button class="selection" id="scissors">SCISSORS</button>
+    </div>
     <script src="rps.js"></script>
 </body>
 </html>
